# DiT-MoE-diffusers

./: .gitignore  README.md  README_DIFFUSERS.md  pyproject.toml
scripts/: _bootstrap.py  convert_dit_moe_to_diffusers.py  sample_dit_moe.py
src/diffusers/: __init__.py  _hf_diffusers.py
src/diffusers/models/: __init__.py
src/diffusers/models/transformers/: __init__.py  transformer_dit_moe.py
src/diffusers/pipelines/: __init__.py
src/diffusers/pipelines/dit_moe/: __init__.py  pipeline_dit_moe.py
src/diffusers/schedulers/: __init__.py  scheduling_flow_match_dit_moe.py
templates/: pipeline.py
tests/: test_dit_moe_diffusers.py
