[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "diffusers-dit-moe"
version = "0.1.0"
description = "Diffusers-style DiT-MoE components for class-conditional image generation."
readme = "README.md"
requires-python = ">=3.10"
license = { text = "MIT" }
dependencies = [
    "diffusers>=0.30.1",
    "torch",
    "numpy",
    "safetensors",
    "timm",
    "accelerate",
    "transformers",
]

[project.optional-dependencies]
dev = ["pytest"]
flash = ["flash-attn"]

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
